css/TopMenus.css
#Page #RoomMenuDiv,
#Page #ChallengeMenuDiv,
#Page #GameRoomMenuDiv {
	position		: absolute;
	/*right			: 25mm;*/
	top 			: 19.0mm;
	border			: 1px solid #216778;
	border-top		: 0px;
	background-color: #FFF;
	width			: 35mm;
	height			: 26mm;
	padding			: 1mm;
}

#Page #GameRoomMenuDiv {
	width			: 44mm;
}

#Page #ChallengeMenuDiv {
}


#Page #RoomMenuDiv p,
#Page #ChallengeMenuDiv p,
#Page #GameRoomMenuDiv p {
	font			: italic 12px Trebuchet MS;
	color			: #216778;
	cursor			: pointer;
}

#Page #RoomMenuDiv ul,
#Page #ChallengeMenuDiv ul
{
	height			: 17.5mm;
	list-style		: none;
	overflow		: auto;
}

#Page #RoomMenuDiv li,
#Page #ChallengeMenuDiv li
{
	font			: 11px Trebuchet MS;
	color			: #216778;
	margin-top		: 3px;
	cursor			: pointer;
}

#Page #RoomMenuDiv li:hover,
#Page #RoomMenuDiv p:hover,
#Page #RoomMenuDiv span:hover,
#Page #ChallengeMenuDiv li:hover,
#Page #ChallengeMenuDiv p:hover,
#Page #GameRoomMenuDiv li:hover,
#Page #GameRoomMenuDiv p:hover {
	background-color: #EAF4F5;
}

#Page #RoomMenuDiv hr {
	height			: 1px;
	background-color	: #FFA200;
	border			: 0px;
	margin			:	2mm 0mm 1mm 0mm;
}

#Page #RoomMenuDiv #createRoom {
	border-bottom	:	1px solid #216778;
	cursor			: pointer;
}


#Page #GameRoomMenuDiv ul
{
	font			: italic bold 11px Trebuchet MS;
	color			: #216778;
	margin-top		: 3px;
	cursor			: default;
	list-style		: none;
}

#Page #GameRoomMenuDiv li
{
	font			: 10px Trebuchet MS;
	color			: #216778;
	cursor			: pointer;
	text-align		: center;
}

